tests/errors/always_const_condition/always_const.meth
const log x = false;

if (x) {
    // do something
}

const log y = true;

if (y) {
    // do something
}


while (false) {
    // do something
}

const int c = 20;
for (int i = 8; c < 20; i = i + 1) {
    // do something
}